<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/md_theme_onBackground"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="6dp"/>

                <EditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_input_outline"
                    android:backgroundTint="@color/md_theme_background"
                    android:hint="@string/you_email_com"
                    android:textColorHint="@color/md_theme_onBackground_mediumContrast"
                    android:textColor="@color/md_theme_onBackground"
                    android:paddingStart="20dp"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:id="@+id/tvEmailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ops_invalid_email_address"
                    android:textColor="@color/md_theme_error"
                    android:textSize="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/md_theme_onBackground"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="6dp"/>

                <EditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_input_outline"
                    android:backgroundTint="@color/md_theme_background"
                    android:hint="@string/psw"
                    android:textColorHint="@color/md_theme_onBackground_mediumContrast"
                    android:textColor="@color/md_theme_onBackground"
                    android:paddingStart="20dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/tvPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_is_too_short"
                    android:textColor="@color/md_theme_error"
                    android:textSize="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="@color/md_theme_onBackground"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="6dp"/>

                <EditText
                    android:id="@+id/etConfirmPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_input_outline"
                    android:backgroundTint="@color/md_theme_background"
                    android:hint="@string/psw"
                    android:textColorHint="@color/md_theme_onBackground_mediumContrast"
                    android:textColor="@color/md_theme_onBackground"
                    android:paddingStart="20dp"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/tvConfirmPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwords_do_not_match"
                    android:textColor="@color/md_theme_error"
                    android:textSize="12sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/create_account"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/bg_button_blue"
                app:backgroundTint="@null"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/md_theme_onBackground"
                android:textSize="14sp"
                android:layout_marginBottom="25dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/continue_with_google"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/bg_input_outline"
                app:backgroundTint="@null"
                android:drawableStart="@drawable/ic_google_logo"
                android:drawablePadding="12dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/by_continuing_you_agree_to_our_terms_of_service"
                android:textColor="@color/md_theme_onBackground"
                android:textSize="12sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/md_theme_background"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:indeterminateTint="@color/md_theme_primary"/>

        <TextView
            android:id="@+id/tvLoadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logging_in"
            android:textColor="@color/md_theme_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</FrameLayout>
